# neewer-control

./: .gitignore  PLAN.md  README.md  RESEARCH.md  dtrace_sniff.sh  frida_sniff.js  hid_probe.c  lldb_commands.txt  lldb_sniff.py  lldb_write_hook.py  neewer_control.py  neewer_usb_control.py  probe.py  probe_hid.py  probe_hidapi_v4.py  probe_hidapi_v5.py  probe_hidapi_v6.py  probe_iokit.py  probe_serial_v2.py  probe_serial_v3.py  probe_serial_v4.py  probe_usb_v4.py  sniff.py  temp_calibrate.py  temp_calibration.json
app/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
app/src/: App.svelte
app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  lib.rs  main.rs  protocol.rs  serial.rs
