[package]
name = "neewer-control"
version = "0.1.0"
edition = "2021"

[lib]
name = "neewer_control_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "neewer-control"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
serialport = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
